--- a/scss/marshall.scss
+++ b/scss/marshall.scss
@@ -1193,6 +1193,7 @@ h1 a {
             margin: 0;
             padding: 0;
             list-style: none;
+            @include clearfix;
             float: none;
 
             li {
@@ -2828,6 +2829,10 @@ h1 a {
                 padding: 5px 0 0 0;
                 display: block;
             }
+
+            .hide-me {
+                display: none;
+            }
         }
     }
 
@@ -2849,33 +2854,33 @@ h1 a {
     }
 }
 
-.desktop {
-    #basket {
-        .container {
-            .detail {
-                .btn_checkout {
-                    background: url('../images/btn-bgs.png') no-repeat;
-                    padding: 9px 13px 9px;
-                    display: block;
-                    color: $yellow;
-                    margin-top: 5px;
-                    font-family: Arial;
-                    font-weight: bold;
-                    font-size: 13px;
-                    line-height: 15px;
-                    border: 0;
-                    text-align: left;
-                    width: 91px;
-                    text-decoration: none;
 
-                    .icon {
-                        display: none;
-                    }
+#basket {
+    .container {
+        .detail {
+            .btn_checkout {
+                background: url('../images/btn-bgs.png') no-repeat;
+                padding: 9px 13px 9px;
+                display: block;
+                color: $yellow;
+                margin-top: 5px;
+                font-family: Arial;
+                font-weight: bold;
+                font-size: 13px;
+                line-height: 15px;
+                border: 0;
+                text-align: left;
+                width: 91px;
+                text-decoration: none;
+
+                .icon {
+                    display: none;
                 }
             }
         }
     }
 }
+
 
 .desktop {
     #back-to-top {
@@ -3118,6 +3123,14 @@ h1 a {
         #config_machine .email-option .column p.error .error {
             margin-left: 0;
             clear: left;
+        }
+
+        .filters {
+            li {
+                width: 30%;
+                margin: 0 10px 20px 10px;
+                height: 375px;
+            }
         }
     }
 
@@ -3392,8 +3405,6 @@ h1 a {
             margin-top: 0;
         }
 
-
-
         h1 {
             padding-top: 15px;
         }
@@ -3614,12 +3625,20 @@ h1 a {
             }
         }
 
+        .filters {
+            li {
+                width: 45%;
+                margin: 0 10px 20px 10px;
+                height: 375px;
+            }
+        }
+
         #basket {
-            top: -76px;
+            top: -82px;
             left: 0;
             border: none;
             width: 100%;
-            height: 76px;
+            height: 82px;
             position: fixed;
             overflow: inherit;
             background: $white;
@@ -3640,12 +3659,24 @@ h1 a {
                     float: none;
                     width: 100%;
                     border: none;
+                    position: relative;
 
                     h3 {
                         background: $darkblue;
                         color: $white;
-                        padding: 5px 10px;
+                        padding: 8px 10px;
                         margin: 5px 5px 0 5px;
+                    }
+
+                    .hide-me {
+                        display: block;
+                        position: absolute;
+                        top: 1px;
+                        right: 12px;
+
+                        text-decoration: none;
+                        color: #fff;
+                        font-size: 2.2em;
                     }
 
                     .detail {
@@ -3676,10 +3707,16 @@ h1 a {
                             font-weight: bold;
                             padding: 3px 7px 4px 4px;
                             background: $red;
+                            width: auto;
+                            margin-top: 0;
                             @include border-radius(3px);
 
                             .text {
                                 display: none;
+                            }
+
+                            .icon {
+                                display: block;
                             }
                         }
                     }
@@ -3825,6 +3862,8 @@ h1 a {
                 }
             }
         }
+
+
 
         .carousel .copy h2,
         .mainbox h2 {
