--- a/scss/marshall.scss
+++ b/scss/marshall.scss
@@ -3791,6 +3791,9 @@ h1 a {
                         width: 100%;
                     }
                 }
+                .configure {
+                    display: none;
+                }
             }
 
             .sidebox {
