--- a/css/marshall.css
+++ b/css/marshall.css
@@ -592,39 +592,29 @@ h1 a {
 }
 
 .desktop .carousel .bx-controls {
-  padding: 0 15px 5px 0;
+  padding: 0 12px 5px 0;
   position: relative;
 }
-.desktop .bx-controls-direction {
-  position: absolute;
-  right: 10px;
-  top: 0;
-  width: 90px;
-}
-.desktop .bx-controls-direction .icon {
+.desktop .icon {
   background: url("../images/nav_paging.png") no-repeat;
   width: 18px;
   height: 19px;
   text-indent: -9999px;
   margin: 0;
   padding: 0;
-  float: left;
+  float: right;
 }
-.desktop .bx-controls-direction .icon.icon-arrow-long-left {
+.desktop .icon.icon-arrow-long-left {
   background-position: 0 0;
 }
-.desktop .bx-controls-direction .icon.icon-arrow-long-left:hover {
+.desktop .icon.icon-arrow-long-left:hover {
   background-position: 0 -19px;
 }
-.desktop .bx-controls-direction .icon.icon-arrow-long-right {
-  float: right;
+.desktop .icon.icon-arrow-long-right {
   background-position: -32px 0;
 }
-.desktop .bx-controls-direction .icon.icon-arrow-long-right:hover {
+.desktop .icon.icon-arrow-long-right:hover {
   background-position: -32px -19px;
-}
-.desktop .carousel .bx-pager {
-  margin-right: 13px;
 }
 .desktop .carousel .bx-pager-item {
   display: inline-block;
@@ -636,7 +626,7 @@ h1 a {
   height: 19px;
   display: block;
   text-indent: -9999px;
-  margin: 0 3px 0 0;
+  margin: 0 1px;
   padding: 0;
 }
 .desktop .carousel .bx-pager-item a:hover,
@@ -2114,7 +2104,6 @@ h1 a {
 /* ================================================ */
 .footer {
   background-color: #001848;
-  margin-bottom: 20px;
   font-size: 0.85em;
   color: #cccccc;
   text-align: left;
@@ -2321,8 +2310,40 @@ h1 a {
   display: none;
 }
 
-.desktop #back-to-top {
-  display: none;
+#back-to-top {
+  right: 0;
+  bottom: -45px;
+  border: none;
+  width: 40px;
+  height: 36px;
+  position: fixed;
+  text-align: right;
+  -webkit-transition: bottom 250ms;
+  -moz-transition: bottom 250ms;
+  -o-transition: bottom 250ms;
+  transition: bottom 250ms;
+}
+#back-to-top span {
+  color: white;
+  text-decoration: none;
+  padding: 5px 6px;
+  font-size: 1.2em;
+  display: inline-block;
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  background: black;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  opacity: 80%;
+}
+#back-to-top.onScreen {
+  bottom: 0;
+  -webkit-transition: bottom 250ms;
+  -moz-transition: bottom 250ms;
+  -o-transition: bottom 250ms;
+  transition: bottom 250ms;
 }
 
 .mobile {
@@ -2443,43 +2464,6 @@ h1 a {
 }
 .mobile .old-mobile .blue-link:active, .mobile .old-mobile .blue-link:hover {
   background: #0f82ff;
-}
-.mobile #back-to-top {
-  left: 0;
-  bottom: -45px;
-  border: none;
-  width: 100%;
-  height: 36px;
-  position: fixed;
-  text-align: right;
-  -webkit-transition: bottom 250ms;
-  -moz-transition: bottom 250ms;
-  -o-transition: bottom 250ms;
-  transition: bottom 250ms;
-  color: #fff;
-  background: white;
-  background: rgba(255, 255, 255, 0.4);
-}
-.mobile #back-to-top span {
-  color: white;
-  text-decoration: none;
-  padding: 5px 6px;
-  font-size: 1.2em;
-  display: inline-block;
-  position: absolute;
-  top: 5px;
-  right: 5px;
-  background: black;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  border-radius: 3px;
-}
-.mobile #back-to-top.onScreen {
-  bottom: 0;
-  -webkit-transition: bottom 250ms;
-  -moz-transition: bottom 250ms;
-  -o-transition: bottom 250ms;
-  transition: bottom 250ms;
 }
 @media only screen and (max-width: 1000px) {
   .mobile {
