--- a/scss/marshall.scss
+++ b/scss/marshall.scss
@@ -700,47 +700,34 @@ h1 a {
 .desktop {
 
     .carousel .bx-controls {
-          padding: 0 15px 5px 0;
+          padding: 0 12px 5px 0;
           position: relative;
     }
 
-    .bx-controls-direction {
-          position: absolute;
-          right: 10px;
-          top: 0;
-          width: 90px;
+    .icon {
+        background: url('../images/nav_paging.png') no-repeat;
+        width: 18px;
+        height: 19px;
+        text-indent: -9999px;
+        margin: 0;
+        padding: 0;
+        float: right;
 
-          .icon {
-                background: url('../images/nav_paging.png') no-repeat;
-                width: 18px;
-                height: 19px;
-                text-indent: -9999px;
-                margin: 0;
-                padding: 0;
-                float: left;
+        &.icon-arrow-long-left {
+              background-position: 0 0;
 
-                &.icon-arrow-long-left {
-                      background-position: 0 0;
+              &:hover {
+                  background-position: 0 -19px;
+              }
+        }
 
-                      &:hover {
-                          background-position: 0 -19px;
-                      }
-                }
+        &.icon-arrow-long-right {
+              background-position: -32px 0;
 
-                &.icon-arrow-long-right {
-                      float: right;
-                      background-position: -32px 0;
-
-                      &:hover {
-                          background-position: -32px -19px;
-                      }
-                }
-          }
-    }
-
-
-    .carousel .bx-pager {
-        margin-right: 13px;
+              &:hover {
+                  background-position: -32px -19px;
+              }
+        }
     }
 
     .carousel .bx-pager-item {
@@ -754,7 +741,7 @@ h1 a {
       height: 19px;
       display: block;
       text-indent: -9999px;
-      margin: 0 3px 0 0;
+      margin: 0 1px;
       padding: 0;
     }
 
@@ -2636,7 +2623,6 @@ h1 a {
 /* ================================================ */
 .footer {
     background-color: $darkerblue;
-    margin-bottom: 20px;
     font-size: 0.85em;
     color: $darkgrey;
     text-align: left;
@@ -2881,12 +2867,46 @@ h1 a {
     }
 }
 
+#back-to-top {
+    right: 0;
+    bottom: -45px;
+    border: none;
+    width: 40px;
+    height: 36px;
+    position: fixed;
+    text-align: right;
 
-.desktop {
-    #back-to-top {
-        display: none;
+    -webkit-transition: bottom 250ms;
+    -moz-transition: bottom 250ms;
+    -o-transition: bottom 250ms;
+    transition: bottom 250ms;
+
+    span {
+        color: $white;
+        text-decoration: none;
+        padding: 5px 6px;
+        font-size: 1.2em;
+        display: inline-block;
+
+        position: absolute;
+        top: 5px;
+        right: 5px;
+        background: $black;
+        @include border-radius(3px);
+
+        opacity: 80%;
+    }
+
+    &.onScreen {
+        bottom: 0;
+
+        -webkit-transition: bottom 250ms;
+        -moz-transition: bottom 250ms;
+        -o-transition: bottom 250ms;
+        transition: bottom 250ms;
     }
 }
+
 
 .mobile {
     .carousel {
@@ -3017,48 +3037,6 @@ h1 a {
             &:hover {
                 background: #0f82ff;
             }
-        }
-    }
-
-    #back-to-top {
-        left: 0;
-        bottom: -45px;
-        border: none;
-        width: 100%;
-        height: 36px;
-        position: fixed;
-        text-align: right;
-
-        -webkit-transition: bottom 250ms;
-        -moz-transition: bottom 250ms;
-        -o-transition: bottom 250ms;
-        transition: bottom 250ms;
-
-        color: #fff;
-        background: rgb(255, 255, 255);
-        background: rgba(255, 255, 255, 0.4);
-
-        span {
-            color: $white;
-            text-decoration: none;
-            padding: 5px 6px;
-            font-size: 1.2em;
-            display: inline-block;
-
-            position: absolute;
-            top: 5px;
-            right: 5px;
-            background: $black;
-            @include border-radius(3px);
-        }
-
-        &.onScreen {
-            bottom: 0;
-
-            -webkit-transition: bottom 250ms;
-            -moz-transition: bottom 250ms;
-            -o-transition: bottom 250ms;
-            transition: bottom 250ms;
         }
     }
 
