--- a/css/marshall.css
+++ b/css/marshall.css
@@ -91,6 +91,7 @@ select {
 .header {
   position: relative;
   height: 133px;
+  margin-bottom: 15px;
 }
 
 h1 {
@@ -390,7 +391,7 @@ h1 a {
 /* main */
 /* ================================================ */
 .main {
-  margin-top: 30px;
+  margin-top: 15px;
   margin-right: -246px;
   width: 100%;
   float: left;
@@ -439,7 +440,7 @@ h1 a {
 /* sidebar */
 /* ================================================ */
 .sidebar {
-  margin-top: 30px;
+  margin-top: 15px;
   width: 226px;
   float: left;
   margin-left: 20px;
@@ -666,7 +667,6 @@ h1 a {
 
 .breadcrumb {
   width: 960px;
-  margin: 0 auto -12px auto;
 }
 .breadcrumb:after {
   content: "";
@@ -676,7 +676,7 @@ h1 a {
 .breadcrumb ul {
   float: right;
   margin: 0;
-  padding: 9px 0 0 0;
+  padding: 0;
   list-style: none;
 }
 .breadcrumb ul li {
