--- a/css/marshall.css
+++ b/css/marshall.css
@@ -2216,6 +2216,10 @@ h1 a {
   text-align: center;
 }
 
+.desktop .hasBasket {
+  overflow-x: hidden;
+}
+
 #basket {
   position: absolute;
   top: 176px;
@@ -2478,6 +2482,7 @@ h1 a {
   .mobile .header {
     height: 100px;
     background: #bb1f1d;
+    margin-bottom: 0;
   }
   .mobile .breadcrumb {
     display: none;
@@ -2575,12 +2580,25 @@ h1 a {
   }
   .mobile .news-page-navigation ul li a {
     border: 1px solid #cccccc;
-    padding: 0 10px;
+    padding: 0;
+    width: 29px;
     line-height: 28px;
     text-decoration: none;
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
     border-radius: 3px;
+    background: #cccccc;
+    background: -moz-linear-gradient(top, #cccccc 0%, #ededed 100%);
+    background: -webkit-gradient(left top, left bottom, color-stop(0%, #cccccc), color-stop(100%, #ededed));
+    background: -webkit-linear-gradient(top, #cccccc 0%, #ededed 100%);
+    background: -o-linear-gradient(top, #cccccc 0%, #ededed 100%);
+    background: -ms-linear-gradient(top, #cccccc 0%, #ededed 100%);
+    background: linear-gradient(to bottom, #cccccc 0%, #ededed 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#cccccc', endColorstr='#ededed', GradientType=0 );
+  }
+  .mobile .news-page-navigation ul li a.active {
+    background: #333;
+    color: #fff;
   }
   .mobile .carousel .copy .big-link {
     right: 20px;
